<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">


    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/layout_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/login_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:drawableLeft="@drawable/baseline_person_24"
            android:hint="@string/hint_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/mail_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_email_24"
            android:hint="@string/hint_mail" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_password_24"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password_repeat_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_password_24"
            android:hint="@string/hint_passwordRepeat"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/register_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/hint_login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
