<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:padding="10dp"
        app:srcCompat="@drawable/dynamictriviallogo"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/layout_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_logo"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/login_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/email_login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:drawableLeft="@drawable/baseline_person_24"
            android:hint="@string/hint_username" />

        <EditText
            android:id="@+id/password_login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_password_24"

            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/login_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/hint_register" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
